--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
   </body>
 </html>
 
-<!--     This code is responsible for inserting the contents of each page into the layout. It’s not important to know exactly how this works; what matters is that using this layout ensures that, for example, visiting the page /static_pages/home converts the contents of home.html.erb to HTML and then inserts it in place of <%= yield %>. -->
+<!--     This code is responsible for inserting the contents of each page into the layout.
+ It’s not important to know exactly how this works; what matters is that using this layout ensures that, for example,
+  visiting the page /static_pages/home converts the contents of home.html.erb to HTML and then inserts it
+   in place of <%= yield %>. -->
 
   </body>
 </html>
